# me-slam

./: direct_method.cpp
ch1/: useHello.cpp
ch2/examples/coordTransform/: CMakeLists.txt  coordinateTransform.cpp
ch2/examples/plotTrajectory/: CMakeLists.txt  plotTrajectory.cpp
ch2/useEigen/: CMakeLists.txt  eigenMatrix.cpp
ch2/useGeometry/: CMakeLists.txt  useGeometry.cpp
ch3/trajectoryError/: CMakeLists.txt  trajectoryError.cpp
ch3/useSophus/: CMakeLists.txt  useSophus.cpp
ch4/imageBasics/: CMakeLists.txt  imageBasics.cpp  undistortImage.cpp
ch4/stereo/: CMakeLists.txt  stereoVision.cpp
ch5/: CMakeLists.txt  ceresCurveFitting.cpp  g2oCurveFitting.cpp  gaussNewton.cpp
